--- a/templates/detailed_post.html
+++ b/templates/detailed_post.html
@@ -1,4 +1,10 @@
+{% extends 'base.html' %}
+{% block title %} alfa &raquo {{post.title}} {% endblock %}
+
+{% block content %}
 <h1> Detailed post </h1>
     {{post.title}} <br/>
     {{post.author}} on {{post.time_created}} <br/>
     {{post.body}}
+
+{% endblock %}
