--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,8 @@
-<h1> Post </h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h1> Alfa, alfa, alfa </h1>
 
 <ul>
 {% for post in object_list %}
@@ -10,3 +14,5 @@
     </li>
 {% endfor %}
 </ul>
+
+{% endblock %}
