--- a/alfaapp/templates/base.html
+++ b/alfaapp/templates/base.html
@@ -20,7 +20,15 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" href="{% url 'create-post' %}">Create Post</a>
+              
+              {% if user.is_authenticated %}
+                <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-link active" href="{% url 'create-post' %}">Create Post</a>
+                {% else %}
+                <a class="nav-link active" href="{% url 'signup' %}">Signup</a>
+                <a class="nav-link active" href="{% url 'login' %}">Login</a>
+              {% endif %}
+
               <a class="nav-link active" href="#">Contact</a>
               <a class="nav-link active" href="#">About me</a>
             </div>
