--- a/alfaapp/templates/home.html
+++ b/alfaapp/templates/home.html
@@ -8,13 +8,16 @@
 {% for post in object_list %}
     <p>
         <li><a href="{% url 'detailed-post' post.pk %}">{{post.title}}</a>, 
-            <small> 
-                <a href="{% url 'modify-post' post.pk %}"> edit, </a>
-                <a href="{% url 'delete-post' post.pk %}"> delete </a> <br/>
-            </small> 
+            {% if user.is_authenticated %}
+                <small> 
+                    <a href="{% url 'modify-post' post.pk %}"> edit, </a>
+                    <a href="{% url 'delete-post' post.pk %}"> delete </a> 
+                </small> 
+            {% endif %}
+            <br/>
         <small>{{post.author}} on {{post.time_created}}</small>
         <br/>
-        {{post.body}}
+        {{post.body | slice:"440"}}
         </li>
     </p>
 {% endfor %}
