--- a/alfaapp/templates/base.html
+++ b/alfaapp/templates/base.html
@@ -29,8 +29,7 @@
                 <a class="nav-link active" href="{% url 'login' %}">Login</a>
               {% endif %}
 
-              <a class="nav-link active" href="#">Contact</a>
-              <a class="nav-link active" href="#">About me</a>
+              <a class="nav-link active" href="{% url 'contact' %}">Contact</a>
             </div>
           </div>
         </div>
