--- a/alfaapp/templates/contact.html
+++ b/alfaapp/templates/contact.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
-{% block title %} alfa &raquo create post {% endblock %}
+{% block title %} alfa &raquo contact {% endblock %}
 
 {% block content %}
-
-
 
 <div id="main">
     
@@ -41,29 +39,27 @@
                     <div class="row">
                         <div class="mt-2 col-lg-4 col-sm-6 col-md-6 col-xs-12"> 
                             <div class="col-lg-10">
-                                <input type="text" class="form-control" name="contact-user-name" placeholder="Name">
+                                <input type="text" class="form-control" name="name" placeholder="Name">
                             </div>
                             <div class="mt-2 col-lg-10">
-                                <input type="email" class="form-control" name="contact-user-email" placeholder="Email">
+                                <input type="email" class="form-control" name="email" placeholder="Email">
                             </div>
                             <div class="mt-2 col-lg-10">
-                                <input type="phone" class="form-control" name="contact-user-phone" placeholder="Phone">
+                                <input type="phone" class="form-control" name="phone" placeholder="Phone">
                             </div>
                             <div class="mt-2 col-lg-10">
-                                <input type="phone" class="form-control" name="contact-user-topic" placeholder="Topic">
+                                <input type="phone" class="form-control" name="topic" placeholder="Topic">
                             </div>
                         </div>
                         <div class="mt-2 col-lg-8 col-sm-6 col-md-6 col-xs-12">
                             <div class="col-lg-10">
-                                <textarea name="contact-user-message" class="form-control" placeholder="Message"></textarea>
+                                <textarea name="message" class="form-control" placeholder="Message"></textarea>
                             </div>
                         </div>
                         <div class="mt-4 col-12">
                             <button type="submit" class="btn btn-primary"> Send message </button>
                         </div>
-                        <div class="mt-4 col-12">
-                            <p> {{contact_user_name}},{{message_confirm}} </p>
-                        </div>
+
                         
                     </div>
                 </form>
@@ -72,7 +68,6 @@
     </div>
 
 </div>
-
 
 {% endblock %}
 
