added user perms

--- a/alfaapp/templates/detailed_post.html
+++ b/alfaapp/templates/detailed_post.html
@@ -5,8 +5,10 @@
 <h1> {{post.title}} </h1>
     {% if user.is_authenticated %}
     <small>{{post.author}} on {{post.time_created}} 
-        <a href="{% url 'modify-post' post.pk %}"> edit, </a>
-        <a href="{% url 'delete-post' post.pk %}"> delete </a>
+        {% if user.id ==  post.author.id or user.username == 'Admin' %}
+            <a href="{% url 'modify-post' post.pk %}"> edit, </a>
+            <a href="{% url 'delete-post' post.pk %}"> delete </a>
+        {% endif %}
     </small> 
     {% endif %}
     <br/><br/>
