--- a/alfaapp/templates/base.html
+++ b/alfaapp/templates/base.html
@@ -19,17 +19,28 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav me-auto">
               
               {% if user.is_authenticated %}
-                <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
                 <a class="nav-link active" href="{% url 'create-post' %}">Create Post</a>
-                {% else %}
+                
+              {% else %}
                 <a class="nav-link active" href="{% url 'signup' %}">Signup</a>
                 <a class="nav-link active" href="{% url 'login' %}">Login</a>
+                
               {% endif %}
 
               <a class="nav-link active" href="{% url 'contact' %}">Contact</a>
+              {% if user.is_authenticated %}
+            </div>
+            <div class="navbar-nav ms-auto">
+              <span class="navbar-text ms-auto navbar-text">
+                  {{user.username}}
+              </span>
+              <span>
+                  <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
+              </span>
+              {% endif %}
             </div>
           </div>
         </div>
