--- a/alfaapp/templates/create_post.html
+++ b/alfaapp/templates/create_post.html
@@ -2,18 +2,23 @@
 {% block title %} alfa &raquo create post {% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
-<h2>Creating Post</h2>
+    {% if user.is_authenticated %}
+        <h2>Creating Post</h2>
 
-<div class="form-group">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p}}
-        <button type="submit" class="btn btn-primary"> POST ARTICLE </button>
-    </form>
-</div>
-{% else %}
-Not permited
-{% endif %}
+        <div class="form-group">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p}}
+                <button type="submit" class="btn btn-primary"> POST ARTICLE </button>
+            </form>
+        </div> 
+        
+        <script>
+            var name = "{{ user.id }}";
+            document.getElementById("uname").value = name;
+        </script>
+    {% else %}
+    Not permited
+    {% endif %}
 {% endblock %}
 
